# headwins-poker

./: .gitignore  Dockerfile  README.md  deploy.js  hcli  headwins-poker-task.json  index.js  main.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
buildscripts/: hcli.py
commands/utility/: winnings.js
pokernow_artifacts/hand_logs/: 1-31-2025.csv
pokernow_data/: starting_data.csv
pokernow_data/ledgers/: 1-30-2025.csv
pokernowdata/: starting_data.csv
pokernowdata/hand_logs/: 2-6-25.csv  2-9-25.csv
pokernowdata/ledgers/: 2-10-25.csv  2-2-25.csv  2-3-25.csv  2-8-25.csv  2-9-25.csv
src/: analytics_helpers.py  config.py  get_secret.py  player_mapping.py  session_loading_helpers.py
src/analytics/: analytics_helpers.py  ledger_visualizations.py  log_analytics.py  log_visualizations.py  visualizations.py
src/config/: __init__.py  aws_config.py  discord_config.py
src/dataingestion/: common_utils.py  ledger_session_helpers.py  player_mapping_helpers.py  poker_hand_parser.py  registered_player_helpers.py  starting_data_helpers.py
src/dataingestion/exampledata/: ledger_pglFJqScdUK1GTgUSr_ANvzSv.csv  ledger_pglhN1KGoYilhoChO0hckQMPN.csv  player_mapping.json  poker_now_log_pglFJqScdUK1GTgUSr_ANvzSv.csv  poker_now_log_pglhN1KGoYilhoChO0hckQMPN.csv  registered_players.json
src/dataingestion/schemas/: board_action.py  board_move.py  board_state.py  card.py  card_rank.py  card_suit.py  consolidated_session.py  player_action.py  player_mapping_details.py  player_move.py  player_session_log.py  poker_hand.py  poker_log.py  registered_player.py
src/discord_bot/: example_bot.py
src/discordbot/: commands.py  run_bot.py
src/discordbot/cogs/: graph.py  graph_commands.py  help_commands.py  ledger_and_log.py  ledger_and_log_commands.py  registered_player_commands.py  starting_data.py  starting_data_commands.py  upload.py
src/discordbot/commands/: graph_all_player_nets.py  setup_commands.py  sync.py  upload_ledger_and_log_csv.py  upload_starting_data.py
src/discordbot/helpers/: s3_helpers.py  validation_helpers.py
src/discordbot/services/: s3_service.py  secrets_manager_service.py
src/lambdahandler/: command_handler.py  lambda_handler.py
src/parsing/: player_mapping.py  session_loading_helpers.py
src/parsing/data/: player_mapping.json
src/parsing/schemas/: consolidated_session.py  session.py  starting_data_entry.py
src/pokernowdata/: starting_data.csv
src/pokernowdata/hand_logs/: 2-10-25.csv  2-12-25.csv  2-14-25.csv  2-15-25.csv  2-16-25.csv  2-17-25.csv  2-18-25.csv  2-2-25.csv  2-3-25.csv  2-8-25.csv
src/pokernowdata/ledgers/: 2-12-25.csv  2-14-25.csv  2-16-25.csv  2-17-25.csv  2-18-25.csv  2-6-25.csv
