[project]
name = "headwins-poker"
version = "0.1.0"
description = ""
authors = [
    {name = "Edwin Luo",email = "edwinluo28@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6.1"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.393"
ruff = "^0.9.4"

[tool.pyright]
include = ["headwins_poker"]
exclude = ["**/__pycache__"]
pythonVersion = "3.12"
typeCheckingMode = "strict"

