[tool.poetry]
name = "headwins-poker"
version = "0.1.0"
description = ""
authors = []
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = ">=2.6.1"
discord-py = ">=2.5.0"
python-dotenv = ">=1.0.1,<2.0.0"
typer = ">=0.15.1,<0.16.0"
pandas = ">=2.2.3,<3.0.0"
plotly = ">=5.18.0"
kaleido = "==0.2.1"
pynacl = ">=1.5.0,<2.0.0"
boto3 = "^1.36.19"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.393"
ruff = "^0.9.4"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
pythonVersion = "3.12"
typeCheckingMode = "strict"

# Unknown type checks make working with 3p libraries too difficult
reportMissingTypeStubs = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportUnknownVariableType = "none"


[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"